0.02
 - Fix LICENSE file.
 - Fix cleaning of temporary file in EXAMPLE section in doc.
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SEE ALSO section in doc.
 - Remove diacritics from author name in Makefile.PL.
 - Update Module::Install to 1.16 version.

0.01 2013-11-10
 - First version.