@@ -1,6 +1,8 @@
 Changes
 examples/ex1.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -20,10 +22,10 @@ t/data/ex2.pstree
 t/data/ex3.pstree
 t/data/ex4.pstree
 t/data/ex5.pstree
-t/Graph-Reader-UnicodeTree/00-use.t
-t/Graph-Reader-UnicodeTree/01-version.t
-t/Graph-Reader-UnicodeTree/02-pod_coverage.t
-t/Graph-Reader-UnicodeTree/03-pod.t
-t/Graph-Reader-UnicodeTree/04-new.t
-t/Graph-Reader-UnicodeTree/05-read_graph.t
+t/Graph-Reader-UnicodeTree/01-use.t
+t/Graph-Reader-UnicodeTree/02-version.t
+t/Graph-Reader-UnicodeTree/03-new.t
+t/Graph-Reader-UnicodeTree/04-read_graph.t
 UnicodeTree.pm
+xt/Graph-Reader-UnicodeTree/01-pod_coverage.t
+xt/Graph-Reader-UnicodeTree/02-pod.t
