@@ -4,13 +4,10 @@ author:
   - 'Michal Spacek <skim@cpan.org>'
 build_requires:
   Encode: 0
-  English: 0
   ExtUtils::MakeMaker: 6.36
   File::Object: 0.07
   Test::More: 0
   Test::NoWarnings: 0
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
@@ -26,6 +23,7 @@ no_index:
     - examples
     - inc
     - t
+    - xt
 requires:
   Encode: 0
   Graph::Reader: 0
